// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/enterprises DELETE / /:enterpriseId/accounts/:accountId - delete enterprise account 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/enterprises GET / / - get enterprises 1`] = `
Object {
  "entities": Object {
    "enterprises": Object {
      "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "name": "Test Enterprise",
        "plan": "GROWTH",
      },
    },
  },
  "result": Array [
    "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  ],
}
`;

exports[`/api/enterprises GET / /:enterpriseId - retrieve enterprise 1`] = `
Object {
  "entities": Object {
    "enterprises": Object {
      "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "name": "Test Enterprise",
        "plan": "GROWTH",
      },
    },
  },
  "result": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;

exports[`/api/enterprises GET / /:enterpriseId/accounts - retrieve enterprise accounts 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "name": "Test Account",
        "phoneNumber": null,
        "recallInterval": "6 months",
        "sendRequestEmail": true,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": null,
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/enterprises POST / /:enterpriseId/accounts - create account under enterprise 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "1fa3a399-5a41-42d9-b2c8-59df666ec7ea": Object {
        "EnterpriseId": null,
        "address": "1fa3a399-5a41-42d9-b2c8-59df666ec7ea",
        "bookingWidgetPrimaryColor": null,
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "1fa3a399-5a41-42d9-b2c8-59df666ec7ea",
        "lastSyncDate": null,
        "logo": null,
        "name": "Test Account 2",
        "phoneNumber": null,
        "recallInterval": "6 months",
        "sendRequestEmail": true,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "Africa/Bamako",
        "twilioPhoneNumber": null,
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
      },
    },
    "addresses": Object {
      "1fa3a399-5a41-42d9-b2c8-59df666ec7ea": Object {
        "city": null,
        "country": "CA",
        "id": "1fa3a399-5a41-42d9-b2c8-59df666ec7ea",
        "state": null,
        "street": null,
        "timezone": "Africa/Bamako",
        "zipCode": null,
      },
    },
  },
  "result": "1fa3a399-5a41-42d9-b2c8-59df666ec7ea",
}
`;

exports[`/api/enterprises PUT / /:enterpriseId/accounts/:accountId - update account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "name": "Updated",
        "phoneNumber": null,
        "recallInterval": "6 months",
        "sendRequestEmail": true,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": null,
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;
